--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         <div class="logo"></div>
         <div class="navbar">
             <ul>
-                
                 <a href="about.html"><li>About</li></a>
                 <a href="blogs.html"><li>Blogs</li></a>
                 <a href="contact.html"><li>Contact</li></a>
             </ul>
         </div>
     </header>
+
+    <main>
+        <div class="posts">
+
+        </div>
+    </main>
     
     <script src="script.js"></script>
 </body>
