--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         </div>
     </header>
 
-    <main>
-        <div class="posts">
+    <div class="blog">
 
-        </div>
-    </main>
+    </div>
+
     
     <script src="script.js"></script>
 </body>
