--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <ul>
                 <a href="about.html"><li>About</li></a>
-                <a href="blogs.html"><li>Blogs</li></a>
+                <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
             </ul>
         </div>
