--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
+            <h1>Petrolhead Blogg</h1>
+        </div>
         <div class="navbar">
             <ul>
                 <a href="about.html"><li>About</li></a>
@@ -18,10 +20,12 @@
             </ul>
         </div>
     </header>
+    
+    <main>
+        <div class="blog">
 
-    <div class="blog">
-
-    </div>
+        </div>
+    </main>
 
     
     <script src="script.js"></script>
