--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="details.css">
+    <link rel="stylesheet" href="css/details.css">
 </head>
 <body>
     <header>
@@ -25,6 +25,6 @@
     </div>
 
     
-    <script src="details.js"></script>
+    <script src="js/details.js"></script>
 </body>
 </html>
