--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="about.html"><li>About</li></a>
                 <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
+                <a href="blogs.html">All Blogs</a>
             </ul>
         </div>
     </header>
