--- a/blogs.html
+++ b/blogs.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="blogs.css">
+    <link rel="stylesheet" href="css/blogs.css">
 </head>
 <body>
     
 
     <main>
-        <div class="allBlog">
+        <div class="allBlogs">
 
         </div>
     </main>
