--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="css/blogs.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <h1>Petrolhead Blogg</h1>
+        </div>
+        <div class="navbar">
+            <ul>
+                <a href="about.html"><li>About</li></a>
+                <a href="details.html"><li>Details</li></a>
+                <a href="contact.html"><li>Contact</li></a>
+                <a href="blogs.html">All Blogs</a>
+            </ul>
+        </div>
+    </header>
 
     <main>
         <div class="allBlogs">
