--- a/index.html
+++ b/index.html
@@ -36,6 +36,53 @@
     
     <main>
         <div class="blog">
+            <div class="slides">
+                <div class="numbertext">1 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">2 / 12</div>
+              </div>
+              
+              <div class="slides">
+                <div class="numbertext">3 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">4 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">5 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">6 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">7 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">8 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">9 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">10 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">11 / 12</div>
+              </div>
+
+              <div class="slides">
+                <div class="numbertext">12 / 12</div>
+              </div>
 
         </div>
     </main>
