--- a/blogs.html
+++ b/blogs.html
@@ -26,10 +26,11 @@
         </div>
         <div class="navbar">
             <ul>
+                <a href="index.html">Home</a>
                 <a href="about.html"><li>About</li></a>
                 <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
-                <a href="blogs.html">All Blogs</a>
+                
             </ul>
         </div>
     </header>
