--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/about.css">
 
     <!-- Hotjar Tracking Code for https://modest-kepler-ed6546.netlify.app/index.html -->
 <script>
@@ -19,6 +20,20 @@
 </script>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <h1>Petrolhead Blogg</h1>
+        </div>
+        <div class="navbar">
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="about.html"><li>About</li></a>
+                <a href="details.html"><li>Details</li></a>
+                <a href="contact.html"><li>Contact</li></a>
+                
+            </ul>
+        </div>
+    </header>
     
 </body>
 </html>
