--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
       <h3>This site is a formula one blog. It wil have information about some different teams and drivers. there wil also be info about this season and some historical events pluss some famous crashes.</h3>
 
       <div class="podium">
-          <div class="second">
-              <h3>Max Verstappen</h3>
-              <p>points: 94</p>
-          </div>
-          <div class="first">
-              <h3>Lewis Hamilton</h3>
-              <p>points: 80</p>
-          </div>
-          <div class="third">
-              <h3>Valteri Bottas</h3>
-              <p>points: 47</p>
-          </div>
+            <div class="podium-box">
+                <div class="second">
+                    <h3>Max Verstappen</h3>
+                    <p>points: 80</p>
+                </div>
+                <div class="first">
+                    <h3>Lewis Hamilton</h3>
+                    <p>points: 94</p>
+                </div>
+                <div class="third">
+                    <h3>Valteri Bottas</h3>
+                    <p>points: 47</p>
+                </div>
+            </div>
           <ul class="rest">
               <li>Lando Norris points: 41</li>
               <li>Charles Leclerc points: 40</li>
