--- a/details.html
+++ b/details.html
@@ -32,10 +32,11 @@
         </div>
     </header>
 
-    <div class="blog">
+    <main>
+        <div class="blog">
 
-    </div>
-
+        </div>
+    </main>
     
     <script src="js/details.js"></script>
 </body>
