--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="about.html"><li>About</li></a>
                 <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
-                <a href="blogs.html">All Blogs</a>
+                <a href="blogs.html"><li>All Blogs</li></a>
             </ul>
         </div>
     </header>
@@ -51,26 +51,35 @@
       <div class="podium">
             <div class="podium-box">
                 <div class="second">
-                    <h3>Max Verstappen</h3>
-                    <p>points: 80</p>
+                    <img class="pod-1" src="img/verstappen.png" alt="">
+                    <div class="podium-bot">
+                        <h3>Max Verstappen</h3>
+                        <p>points: 80</p>
+                    </div>
                 </div>
                 <div class="first">
-                    <h3>Lewis Hamilton</h3>
-                    <p>points: 94</p>
+                    <img class="pod-2" src="img/hamilton.png" alt="">
+                    <div class="podium-bot">
+                        <h3>Lewis Hamilton</h3>
+                        <p>points: 94</p>
+                    </div>
                 </div>
                 <div class="third">
-                    <h3>Valteri Bottas</h3>
-                    <p>points: 47</p>
+                    <img class="pod-3" src="img/bottas.png" alt="">
+                    <div class="podium-bot">
+                        <h3>Valteri Bottas</h3>
+                        <p>points: 47</p>
+                    </div>
                 </div>
             </div>
           <ul class="rest">
-              <li>Lando Norris points: 41</li>
-              <li>Charles Leclerc points: 40</li>
-              <li>Sergio "checo" Perez points: 32</li>
-              <li>Daniel Ricciardo points: 24</li>
-              <li>Carlos Sainz points: 20</li>
-              <li>Esterban Ocon points: 10</li>
-              <li>Pier Gasly points: 8</li>
+              <li class="point"><p>Lando Norris points: 41</p></li>
+              <li class="point"><p>Charles Leclerc points: 40</p></li>
+              <li class="point"><p>Sergio "checo" Perez points: 32</p></li>
+              <li class="point"><p>Daniel Ricciardo points: 24</p></li>
+              <li class="point"><p>Carlos Sainz points: 20</p></li>
+              <li class="point"><p>Esterban Ocon points: 10</p></li>
+              <li class="point"><p>Pier Gasly points: 8</p></li>
           </ul>
       </div>
 
