--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
         
     </main>
 
+    <footer>
+        <ul class="footer">
+            <li class="fot">Contact us</li>
+            <li class="fot">About us</li>
+            <li class="fot">FAQ</li>
+        </ul>
+    </footer>
+
     
     <script src="js/script.js"></script>
 </body>
