--- a/details.html
+++ b/details.html
@@ -21,13 +21,15 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="index.html"><h1>Petrolhead Blogg</h1></a>
+        </div>
         <div class="navbar">
             <ul>
-                <a href="index.html">Home</a>
                 <a href="about.html"><li>About</li></a>
                 <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
+                <a href="blogs.html"><li>All Blogs</li></a>
             </ul>
         </div>
     </header>
@@ -39,5 +41,13 @@
     </main>
     
     <script src="js/details.js"></script>
+
+    <footer>
+        <ul class="footer">
+            <li class="fot">Contact us</li>
+            <li class="fot">About us</li>
+            <li class="fot">FAQ</li>
+        </ul>
+    </footer>
 </body>
 </html>
