--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         </div>
         <div class="navbar">
             <ul>
-                <a href="index.html">Home</a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="details.html"><li>Details</li></a>
                 <a href="contact.html"><li>Contact</li></a>
