--- a/contact.html
+++ b/contact.html
@@ -45,27 +45,35 @@
                     <span class="namesTxt"></span>
                 </div>
                 <div class="cont">
-                    <label for="subject">Subject: </label>
-                    <input type="text" id="subject" name="subject">
-                    <span class="subTxt" ></span>
-                </div>
-                <div class="cont">
                     <label for="email">E-mail: </label>
                     <input type="text" id="email" name="email">
                     <span class="emailTxt"></span>
-                </div>
+                </div>  
                 <div class="cont">
                     <label for="address">Address: </label>
                     <input type="text" id="address" name="address">
                     <span class="addressTxt"></span>
+                </div>                              
+                <div class="txt">
+                    <label for="subject">Wright here: </label>
+                    <input type="text" id="subject" name="subject">
+                    <span class="subTxt" ></span>
                 </div>
                 <div class="submit">
                     <input type="submit" value="submit">
                 </div>
             </form>
         </div>
-    </main>    
-    <a href="index.html"><button>HOME</button></a>
+    </main>  
+    
+    <footer>
+        <ul class="footer">
+            <li class="fot">Contact us</li>
+            <li class="fot">About us</li>
+            <li class="fot">FAQ</li>
+        </ul>
+    </footer>
+
     <script src="js/contact.js"></script>
     
 </body>
