--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <br>
     <main>
       <div class="headline">
-        <h2>info</h2>
+        <h2>Info</h2>
       </div>
       
       <br>
-      <h3>This site is a formula one blog. It wil have information about some different teams and drivers. there wil also be info about this season and some historical events pluss some famous crashes.</h3>
+      <h3>This site is a formula one blog. It wil have information about some different teams and drivers. <br> There wil also be info about this season and some historical events pluss some famous crashes.</h3>
 
       <div class="podium">
             <div class="podium-box">
