--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,7 @@
             <ul>
                 <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
-                <a href="details.html"><li>Details</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-
+                <a href="blogs.html"><li>All Blogs</li></a>
             </ul>
         </div>
     </header>
