--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </div>
             
             <div class="karusel">
-                <div class="blog">
-                </div>
+                <img src="img/left.svg" alt="" id="prevBtn">
+                <div class="blog"></div>
+                <img src="img/right.svg" alt="" id="nextBtn">
 
 
         </div>
-                <button id="prevBtn">prev</button>
-                <button id="nextBtn">next</button>
+
             <br>
     <main>
       <div class="headline">
