--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       <br>
       <h3>This site is a formula one blog. It wil have information about some different teams and drivers. <br> There wil also be info about this season and some historical events pluss some famous crashes.</h3>
 
-      <div class="podium">
+      <fieldset>
+          <legend>Podium</legend>
+          <div class="podium">
+          
             <div class="podium-box">
                 <div class="second">
                     <img class="pod-1" src="img/verstappen.png" alt="">
@@ -88,6 +91,7 @@
               <li class="point"><p>Pier Gasly points: 8</p></li>
           </ul>
       </div>
+    </fieldset>
 
 
         
