--- a/blogs.html
+++ b/blogs.html
@@ -42,8 +42,12 @@
         <div class="allBlogs">
 
         </div>
+
+        
     </main>
 
+    <button class="loadMore">view more</button>
+    
     <footer>
         <ul class="footer">
             <li class="fot">Contact us</li>
