--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
             
             <div class="karusel">
-                <img src="img/left.svg" alt="" id="prevBtn">
+                <img class="arrow" src="img/left.svg" alt="" id="prevBtn">
                 <div class="blog"></div>
-                <img src="img/right.svg" alt="" id="nextBtn">
+                <img class="arrow" src="img/right.svg" alt="" id="nextBtn">
 
 
         </div>
