--- a/blogs.html
+++ b/blogs.html
@@ -45,9 +45,9 @@
 
         
     </main>
-
-    <button class="loadMore">view more</button>
-    
+    <div class="btn">
+        <button class="loadMore">view more</button>
+    </div>
     <footer>
         <ul class="footer">
             <li class="fot">Contact us</li>
