--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,21 @@
 </script>
 </head>
 <body>
-    <header>
+    <nav>
         <div class="logo">
-            <h1>Petrolhead Blogg</h1>
+            <h4><a href="index.html">Forumula Blog</a></h4>
         </div>
-        <div class="navbar">
-            <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="about.html"><li>About</li></a>
-                <a href="blogs.html"><li>All Blogs</li></a>
-            </ul>
+        <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="blogs.html">All blogs</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line-1"></div>
+            <div class="line-2"></div>
+            <div class="line-3"></div>
         </div>
-    </header>
+    </nav>
     <main>
         <fieldset>
             <legend>Contact me.</legend>
@@ -75,6 +78,7 @@
     </footer>
 
     <script src="js/contact.js"></script>
+    <script src="js/hamburger.js"></script>
     
 </body>
 </html>
