--- a/about.html
+++ b/about.html
@@ -20,18 +20,21 @@
 </script>
 </head>
 <body>
-    <header>
+    <nav>
         <div class="logo">
-            <h1>Petrolhead Blogg</h1>
+            <h4><a href="index.html">Forumula Blog</a></h4>
         </div>
-        <div class="navbar">
-            <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-                <a href="blogs.html"><li>All Blogs</li></a>
-            </ul>
+        <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="blogs.html">All blogs</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line-1"></div>
+            <div class="line-2"></div>
+            <div class="line-3"></div>
         </div>
-    </header>
+    </nav>
 
     <main>
 
@@ -59,6 +62,8 @@
                 Nunc efficitur fringilla metus at dictum. Nullam at porttitor dolor. Nam mattis tincidunt arcu. Donec non neque eget nibh gravida dapibus. Integer iaculis auctor euismod. Aenean blandit ipsum at sapien molestie tincidunt. Nam congue lacinia ligula, quis vestibulum sapien congue ut. Etiam ante nulla, sagittis finibus ligula eu, varius ultricies felis. Morbi molestie consequat diam quis tincidunt. Sed egestas mauris fringilla ultrices molestie. Donec ornare urna vel tellus consequat bibendum. Morbi facilisis vestibulum sodales. Cras malesuada magna lectus, a malesuada metus commodo at. Sed quam tellus, mattis ut elementum in, viverra at nisl. Fusce et tempor nibh.</p>
             </div>
         </fieldset>
+
+        <script src="js/hamburger.js"></script>
     </main>
     <footer>
         <ul class="footer">
