--- a/details.html
+++ b/details.html
@@ -20,18 +20,21 @@
 </script>
 </head>
 <body>
-    <header>
+    <nav>
         <div class="logo">
-            <a href="index.html"><h1>Petrolhead Blogg</h1></a>
+            <h4><a href="index.html">Forumula Blog</a></h4>
         </div>
-        <div class="navbar">
-            <ul>
-                <a href="about.html"><li>About</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-                <a href="blogs.html"><li>All Blogs</li></a>
-            </ul>
+        <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="blogs.html">All blogs</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line-1"></div>
+            <div class="line-2"></div>
+            <div class="line-3"></div>
         </div>
-    </header>
+    </nav>
 
     <main>
         <div class="blog">
@@ -40,6 +43,7 @@
     </main>
     
     <script src="js/details.js"></script>
+    <script src="js/hamburger.js"></script>
 
     <footer>
         <ul class="footer">
