--- a/blogs.html
+++ b/blogs.html
@@ -36,7 +36,7 @@
 
     <nav>
         <div class="logo">
-            <a href="index.html"><h4>Forumula Blog</h4></a>
+            <a href="index.html"><h4>Formula Blog</h4></a>>
         </div>
         <ul class="nav-links">
             <li><a href="about.html">About</a></li>
