--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4><a href="index.html">Forumula Blog</a></h4>
+            <a href="index.html"><h4>Formula Blog</h4></a>
         </div>
         <ul class="nav-links">
             <li><a href="about.html">About</a></li>
