--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </nav>
     <main>
         <fieldset>
-            <legend>Contact me.</legend>
+            <legend>Contact</legend>
                 <div class="forum">
                     <form class="contact">
                         <div class="cont">
