--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 
     <footer>
         <ul class="footer">
-            <li class="fot">Contact us</li>
-            <li class="fot">About us</li>
-            <li class="fot">FAQ</li>
+            <li class="fot"><a href="contact.html">Contact us</a></li>
+            <li class="fot"><a href="about.html">About us</a></li>
+            <li class="fot"><a href="blogs.html">All blogs</a></li>
+
         </ul>
     </footer>
 
