--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <main>
 
         <fieldset>
-            <legend>About Us.</legend>
+            <legend>About Us</legend>
             <div class="om">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a eleifend nisl, eget sodales massa. Cras augue magna, convallis ac gravida ut, egestas ut est. Fusce non bibendum dui, at feugiat tortor. Vestibulum gravida quis lorem sit amet feugiat. Mauris nibh velit, interdum a tincidunt nec, tincidunt vel ipsum. Pellentesque nunc eros, hendrerit a augue finibus, placerat placerat mauris. Nunc tellus augue, volutpat nec lorem vestibulum, pretium rutrum lorem. Pellentesque at elit et felis suscipit pretium in et justo.
 
