--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
 
         <fieldset>
-            <legend>info</legend>
+            <legend>Info</legend>
             <h3>This site is a formula one blog. It wil have information about some different teams and drivers. <br> There wil also be info about this season and some historical events pluss some famous crashes. <br> There wil be a podium thath changes as races goes to ceep you updated on the results in the drivers championship</h3>
         </fieldset>
 
