--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <div class="line-3"></div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <fieldset>
             <legend>Contact</legend>
                 <div class="forum">
