--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
         
             <div class="headline">
-                <h2>Latest Poasts</h2>
+                <h2>Latest Posts</h2>
             </div>
             
             <div class="karusel">
