--- a/blogs.html
+++ b/blogs.html
@@ -48,7 +48,7 @@
             
         </main>
         <div class="btn">
-            <button class="loadMore">view more</button>
+            <button class="loadMore">View more</button>
         </div>
     </fieldset>
     <footer>
