--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                             <span class="addressTxt"></span>
                         </div>                              
                         <div class="txt">
-                            <label for="subject">Wright here: </label>
+                            <label for="subject">Write here: </label>
                             <textarea name="text" id="subject"></textarea>
                             <br>
                             <span class="subTxt" ></span>
