--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <fieldset>
             <legend>Info</legend>
-            <h3>This site is a formula one blog. It wil have information about some different teams and drivers. <br> There wil also be info about this season and some historical events pluss some famous crashes. <br> There wil be a podium thath changes as races goes to ceep you updated on the results in the drivers championship</h3>
+            <h3>This site is a formula one blog. It will have information about some different teams and drivers. <br> There will also be info about this season and some historical events plus some famous crashes. <br> There will be a podium that changes as races goes to keep you updated on the results in the drivers championship.</h3>
         </fieldset>
 
       <fieldset>
