--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                             <span class="subTxt" ></span>
                         </div>
                         <div class="submit">
-                            <input type="submit" value="submit">
+                            <input type="submit" value="Submit">
                         </div>
                     </form>
                 </div>
