--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="css/about.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 
     <!-- Hotjar Tracking Code for https://modest-kepler-ed6546.netlify.app/index.html -->
 <script>
@@ -22,7 +24,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4><a href="index.html">Forumula Blog</a></h4>
+            <h4><a href="index.html">Formula Blog</a></h4>
         </div>
         <ul class="nav-links">
             <li><a href="about.html">About</a></li>
@@ -50,6 +52,7 @@
                     Nulla facilisi. Donec maximus volutpat mauris a porta. Donec pellentesque tellus nec justo dignissim imperdiet. Aliquam erat volutpat. Proin cursus consectetur sapien eget sollicitudin. Nullam consectetur blandit dolor vel facilisis. Vestibulum in mi eget nibh efficitur ultricies sed eu libero. Sed venenatis sit amet sem id tempus. Vivamus lacus ligula, convallis non vehicula quis, pretium ac felis. Praesent lorem nisl, tempus mattis pharetra in, bibendum quis mi.
                     
                     Nunc efficitur fringilla metus at dictum. Nullam at porttitor dolor. Nam mattis tincidunt arcu. Donec non neque eget nibh gravida dapibus. Integer iaculis auctor euismod. Aenean blandit ipsum at sapien molestie tincidunt. Nam congue lacinia ligula, quis vestibulum sapien congue ut. Etiam ante nulla, sagittis finibus ligula eu, varius ultricies felis. Morbi molestie consequat diam quis tincidunt. Sed egestas mauris fringilla ultrices molestie. Donec ornare urna vel tellus consequat bibendum. Morbi facilisis vestibulum sodales. Cras malesuada magna lectus, a malesuada metus commodo at. Sed quam tellus, mattis ut elementum in, viverra at nisl. Fusce et tempor nibh.
+                <br>
                 <br>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a eleifend nisl, eget sodales massa. Cras augue magna, convallis ac gravida ut, egestas ut est. Fusce non bibendum dui, at feugiat tortor. Vestibulum gravida quis lorem sit amet feugiat. Mauris nibh velit, interdum a tincidunt nec, tincidunt vel ipsum. Pellentesque nunc eros, hendrerit a augue finibus, placerat placerat mauris. Nunc tellus augue, volutpat nec lorem vestibulum, pretium rutrum lorem. Pellentesque at elit et felis suscipit pretium in et justo.
 
