--- a/details.html
+++ b/details.html
@@ -25,15 +25,16 @@
         <div class="logo">
             <a href="index.html"><h4>Formula Blog</h4></a>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-list">
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="blogs.html">All blogs</a></li>
         </ul>
-        <div class="burger">
-            <div class="line-1"></div>
-            <div class="line-2"></div>
-            <div class="line-3"></div>
+
+        <div class="menu">
+            <div class="menyLine-1"></div>
+            <div class="menuLine-2"></div>
+            <div class="menuLine-3"></div>
         </div>
     </nav>
 
