--- a/details.html
+++ b/details.html
@@ -21,22 +21,24 @@
 </script>
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <a href="index.html"><h4>Formula Blog</h4></a>
-        </div>
-        <ul class="nav-list">
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="blogs.html">All blogs</a></li>
-        </ul>
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><h4>Formula Blog</h4></a>
+            </div>
+            <ul class="nav-list">
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blogs.html">All blogs</a></li>
+            </ul>
 
-        <div class="menu">
-            <div class="menyLine-1"></div>
-            <div class="menuLine-2"></div>
-            <div class="menuLine-3"></div>
-        </div>
-    </nav>
+            <div class="menu">
+                <div class="menyLine-1"></div>
+                <div class="menuLine-2"></div>
+                <div class="menuLine-3"></div>
+            </div>
+        </nav>
+    </header>
 
     <main>
         <div class="blog">
