--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,9 @@
                             <span class="emailTxt"></span>
                         </div>  
                         <div class="cont">
-                            <label for="address">Address: </label>
-                            <input type="text" id="address" name="address">
-                            <br>
-                            <span class="addressTxt"></span>
+                            <label for="subject">Subject: </label>
+                            <input type="text" id="subject" name="subject">
+                            <span class="subTxt" ></span>
                         </div>                              
                         <div class="txt">
                             <label for="subject">Write here: </label>
