--- a/details.html
+++ b/details.html
@@ -45,6 +45,10 @@
 
         </div>
     </main>
+
+    <div class="modal">
+        
+    </div>
     
     <script src="js/details.js"></script>
     <script src="js/hamburger.js"></script>
