--- a/details.html
+++ b/details.html
@@ -42,6 +42,7 @@
 
     <main>
         <div class="blog">
+            <div class="loading"><img src="img/mclarenf1800x600.gif" alt="loading"></div>
 
         </div>
     </main>
