--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
             
             <div class="karusel">
                 <img class="arrow" src="img/left.svg" alt="" id="prevBtn">
-                <div class="blog"></div>
+                <div class="blog"><div class="loading"><img src="img/mclarenf1800x600.gif" alt="loading"></div></div>
                 <img class="arrow" src="img/right.svg" alt="" id="nextBtn">
+                
 
 
         </div>
