--- a/blogs.html
+++ b/blogs.html
@@ -43,6 +43,7 @@
 
     <fieldset>
         <legend>All blogs</legend>
+        <div class="loading"><img src="img/mclarenf1800x600.gif" alt="loading"></div>
         <main>
 
             <div class="allBlogs">
@@ -55,6 +56,8 @@
             <button class="loadMore">View more</button>
         </div>
     </fieldset>
+
+    
     <footer>
         <ul class="footer">
             <li class="fot"><a href="contact.html">Contact us</a></li>
