--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             <div class="karusel">
                 <img class="arrow" src="img/left.svg" alt="" id="prevBtn">
-                <div class="blog"><div class="loading"><img class="gif" src="img/mclarenf1800x600.gif" alt="loading"></div></div>
+                <div class="blog"><div class="loading"><img class="gif" src="img/mclarenf1800x600.gif" alt="loading"></div>
                 <img class="arrow" src="img/right.svg" alt="" id="nextBtn">
                 
 
