--- a/blogs.html
+++ b/blogs.html
@@ -43,7 +43,7 @@
 
     <fieldset>
         <legend>All blogs</legend>
-        <div class="loading"><img class="gif" src="img/mclarenf1800x600.gif" alt="loading"></div>
+        <div class="loading"><img class="gif" src="img/ezgif.com-gif-maker (1).gif" alt="loading"></div>
         <main>
 
             <div class="allBlogs">
