--- a/details.html
+++ b/details.html
@@ -42,7 +42,7 @@
 
     <main>
         <div class="blog">
-            <div class="loading"><img class="gif" src="img/mclarenf1800x600.gif" alt="loading"></div>
+            <div class="loading"><img class="gif" src="img/ezgif.com-gif-maker (1).gif" alt="loading"></div>
 
         </div>
     </main>
