--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="Hi, you want to learn more about us? just read on and you will find uot all you need to know">
     <title>About</title>
     <link rel="stylesheet" href="css/about.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
