--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html"><h1>Formula Blog</h1></a>
+                <a href="index.html"><img src="img/logof1.png" alt="logo"></a>
             </div>
             <ul class="nav-list">
                 <li><a href="about.html">About</a></li>
